# personal-assistant

./: .gitignore  .mcp.json  README.md  pyproject.toml
.github/workflows/: daily-briefing.yml
scripts/: setup_ci_data.sh
src/assistant/: __init__.py  config.py
src/assistant/cli/: briefing.py  calendar.py  chat.py  events.py  family.py  gmail.py  main.py  maps.py  todo.py
src/assistant/models/: family.py  todo.py
src/assistant/services/: briefing.py  briefing_html.py  calendar.py  family.py  gmail.py  google_auth.py  local_events.py  maps.py  todo.py  todoist.py  weather.py
src/assistant/storage/: database.py  family_repo.py  todo_repo.py
src/assistant/templates/: briefing.html
tests/: conftest.py  test_family_repo.py  test_local_events.py
